Changed package manager ignore folders

--- a/.npmignore
+++ b/.npmignore
@@ -1,12 +1,14 @@
 
 # Testing
-Test/
 Deploy/
+Development/
+Documentation/
 
 # Miscellaneous
 .git/
 .DS_Store
 .gitignore
+*.zip
 
 # Packages
 node_modules/
