--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "keywords": [
     "data",
-    "database",
     "db",
+    "database",
+    "management",
+    "utility",
     "backend",
+    "sql",
     "qulity"
   ],
   "homepage": "https://github.com/QSmally/QDB#readme",
