Rename CLI's main entry file and rework some bits

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docs": "gendocs Test/DocConf.json"
   },
   "bin": {
-    "qdb": "Shell/Main.js"
+    "qdb": "Shell/CLI.js"
   },
   "keywords": [
     "database",
