--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "better-sqlite3": "^7.1.1",
+    "enquirer": "^2.3.6",
     "qulity": "^1.4.2"
   },
   "devDependencies": {
