--- a/.npmignore
+++ b/.npmignore
@@ -1,4 +1,7 @@
 
+# Dependencies
+node_modules/
+
 # Testing
 Test/
 Deploy/
@@ -10,6 +13,3 @@ Documentation/
 .DS_Store
 .gitignore
 *.zip
-
-# Packages
-node_modules/
