--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "better-sqlite3": "^7.4.3",
-    "qulity": "^2.1.0"
+    "qulity": "^2.1.0",
+    "rfdc": "^1.3.0"
   },
   "devDependencies": {
     "cli-color": "^2.0.0",
