--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "QDB.js",
   "scripts": {
     "test": "node Test/Test.js",
-    "debug": "node Test/Main.js -d",
     "benchmark": "node Benchmark/Main.js"
   },
   "bin": {
@@ -13,11 +12,8 @@
   },
   "keywords": [
     "sql",
-    "utility",
+    "sqlite",
     "database",
-    "pools",
-    "backend",
-    "management",
     "optimisation",
     "transaction",
     "schema"
@@ -35,7 +31,7 @@
     "rfdc": "^1.3.0"
   },
   "devDependencies": {
-    "cli-color": "^2.0.0",
+    "cli-color": "^2.0.2",
     "docgen": "github:QSmally/Docgen"
   }
 }
